# evlit-agent

./: .env.example  .gitignore  AGENTS.md  AI agent项目步骤.md  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
benchmarks/: eventvision_queries.jsonl
output/reports/: agent_workflow_analysis.md  evagent_ask_call_sequence.md  event_detection_tracking_2021plus_top20.json  event_detection_tracking_2021plus_top20.md
output/sub_agents/space_observation_digest/: digest_2026-03-05.json  digest_2026-03-05.md  state.json
output/taxonomy/: event_detection_tracking_taxonomy_2021plus.json  event_detection_tracking_taxonomy_2021plus.md  event_detection_tracking_taxonomy_2023plus.json  event_detection_tracking_taxonomy_2023plus.md
references/: borrowed_components.md  imported_repos.yaml  paper_analysis_template.md  rewrite_timeline_2025_06_to_2026_03.yaml  source_urls.jsonl  source_urls.txt  upstream_repos.yaml
scripts/: bootstrap_refs.sh  cache_links.sh  check_quota.sh  convert_beautiful_svg_to_png.py  convert_svg_to_png.py  generate_beautiful_promo_svg.py  generate_event_star_review_pdf.py  generate_event_star_review_pdf_en.py  generate_promo_diagram.py  generate_promo_svg.py  generate_workflow_diagram.py  generate_workflow_diagram_en.py  import_upstream_history.sh  import_upstreams_from_yaml.sh  rewrite_history_gradual.py
src/evagent/: __init__.py  app.py  config.py  models.py
src/evagent/agents/: graph.py  nodes.py  (+1 more)
tests/: test_cli_profile_options.py  test_metrics.py  test_models.py  test_nodes.py  test_profile_ranking.py  test_space_observation_digest_agent.py
(+35 files in other folders)
