[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "eventvision-literature-agent"
version = "0.1.0"
description = "Multi-agent RAG starter for event camera and AI imaging literature."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  { name = "Mengyu" }
]
dependencies = [
  "typer>=0.12.5",
  "rich>=13.7.1",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.4.0",
  "requests>=2.32.0",
  "tenacity>=9.0.0",
  "orjson>=3.10.0",
  "python-dotenv>=1.0.1",
  "structlog>=24.4.0",
  "langgraph>=0.2.30",
  "litellm>=1.55.0",
  "qdrant-client>=1.11.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0"
]

[project.scripts]
evagent = "evagent.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/evagent"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
